--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>TeacherApp</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>TeacherApp</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBealmYfWAxWWgsK7K5kqrtijdlO5iD5U8&libraries=places,directions"></script>
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
