haced NPM install, location added pero no asociada a form

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.ico" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBealmYfWAxWWgsK7K5kqrtijdlO5iD5U8&libraries=places,directions"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBealmYfWAxWWgsK7K5kqrtijdlO5iD5U8&libraries=places,directions"></script> -->
+    <!-- Api key con tarjeta bancaria puesta -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOLYKn6-l2m_NrFC_WgxG5JT-MALF2IYw&libraries=places,directions"></script>
   </head>
   <body>
     <app-root></app-root>
